# franktheunicorn

./: .dockerignore  .env.example  .gitignore  =6.0  AGENTS.md  ATTRIBUTION.md  CLAUDE.md  Dockerfile.web  Dockerfile.worker  Makefile  README.md  REVIEWER.md  alembic.ini  compose.yaml  manage.py  pyproject.toml
.claude/: settings.json
.claude/hooks/: pre-push-lint.sh  session-start.sh
.github/workflows/: ci.yml  e2e-setup.yml
alembic/: env.py
config/active/: .gitignore
config/e2e/projects/: franktheunicorn-franktheunicorn.yaml
config/examples/: operator.yaml
config/examples/e2e/: operator.yaml
config/examples/projects/: apache-spark-website.yaml  apache-spark.yaml  personal-django.yaml
config_examples/solo-maintainer/: operator.yaml
config_examples/solo-maintainer/projects/: example.yaml
config_examples/team-lead/: operator.yaml
config_examples/team-lead/projects/: example.yaml
configs/examples/: operator.yaml  project-myapp.yaml  project-spark.yaml
configs/examples/projects/: personal-django.yaml
data/: .gitkeep
docker/: Dockerfile  Dockerfile.web  Dockerfile.worker  compose.llama-cpp.yaml.template  compose.ollama.yaml.template  compose.vllm.yaml.template  rlm-notebook.Dockerfile
docs/: codebase-audit.md  franktheunicorn-master-design.md  install.md  scoring-future.md  security-design.md  test-runner.md
k8s/: deploy.yaml
scripts/: dev_setup.sh  launch.sh  reset_db.sh  run_local_all.sh  run_poll.sh  setup.sh
src/franktheunicorn/: __init__.py  anti_pattern.py  config.py  database.py  digest.py  env_loader.py  github_client.py  models.py  poller.py  review.py  scoring.py  settings.py  storage.py  urls.py  wsgi.py
src/franktheunicorn/alerts/: __init__.py  service.py
src/franktheunicorn/backends/: __init__.py  base.py  diff_position.py  gerrit.py  gitea.py  github.py  gitlab.py  mock.py  poller.py  poster.py
src/franktheunicorn/config/: __init__.py  credential_detection.py  loader.py  model_discovery.py  models.py  resolver.py  schema.py
src/franktheunicorn/core/: admin.py  apps.py  models.py  session_detector.py
src/franktheunicorn/curator/: app.py  classifier.py  dataset.py  scraper.py
src/franktheunicorn/dashboard/: context_processors.py  urls.py  views.py
src/franktheunicorn/data_access/: __init__.py  base.py  cache.py  context_orchestrator.py  rate_limiter.py
src/franktheunicorn/digest/: apps.py  service.py
src/franktheunicorn/fine_tuning/: __init__.py  axolotl_config.py  data_export.py  evaluator.py  trainer.py
src/franktheunicorn/github/: client.py  mock.py  poller.py  poster.py
src/franktheunicorn/personalities/: __init__.py  builder.py  frank.md
src/franktheunicorn/review/: agent_cli.py  agent_tools.py  antipattern.py  auto_poster.py  claude_cli.py  coderabbit.py  context_builder.py  (+9 more)
tests/: conftest.py  factories.py  test_admin.py  test_anti_pattern.py  test_backends_base.py  test_blame_fetcher.py  test_blame_scoring.py  test_coderabbit.py  test_collaborators.py  test_committer_derank.py  test_config.py  test_context_orchestrator.py  test_dashboard.py  test_dedup.py  test_diff_position.py  test_digest.py  test_env_loader.py  test_feedback_formatter.py  test_gerrit_client.py  test_gitea_client.py  test_github_client.py  test_github_poster.py  test_gitlab_client.py  test_integration.py  test_llm_backends.py  test_management_commands.py  test_merge_queue.py  test_models.py  test_moderation.py  test_poller.py  test_poster.py  test_prompt.py  test_rejection_predictor.py  test_repo_manager.py  test_review.py  test_sandbox.py  test_scorer.py  test_scoring.py  test_session_detector.py  test_setup_integration.py  (+8 more)
tests/alerts/: test_service.py
tests/config/: test_agent_tools_config.py  test_credential_detection.py  test_forge_registry.py  test_model_discovery.py  test_resolver.py
tests/core/: test_admin.py  test_check_migration_conflicts.py  test_config.py  test_management_commands.py  test_models.py  test_session_detector.py
tests/curator/: helpers.py  test_app.py  test_classifier.py  test_dataset.py  test_management_command.py  test_scraper.py
tests/dashboard/: test_dashboard.py  test_lookup_pr.py  test_markdown_filter.py  test_security_views.py  test_template_comments_and_scores.py  test_theming.py
tests/data_access/: conftest.py  test_cache.py  test_context_orchestrator.py  test_rate_limiter.py
tests/fine_tuning/: test_axolotl_config.py  test_data_export.py  test_evaluator.py  test_trainer.py
tests/fixtures/: claude_cli_output.txt  coderabbit_output.txt  snowflake_review_output.txt
tests/personalities/: test_builder.py  test_loader.py
tests/review/: test_agent_cli.py  test_agent_tools.py  test_auto_poster.py  test_claude_agentic.py  test_claude_cli.py  test_coderabbit.py  test_context_builder.py  test_copypasta.py  test_cost_metering.py  test_dedup.py  test_drafter.py  test_drafter_tools.py  test_import_resolver_python.py  test_llm_backends.py  test_openai_backend_fallback.py  test_personality.py  test_prompt.py  test_review.py  test_rlm_aggregate.py  test_rlm_backend.py  test_rlm_broker.py  test_rlm_decompose.py  test_rlm_drafter.py  test_rlm_engine.py  test_rlm_notebook.py  test_rlm_sandbox_runner.py  test_rlm_server.py  test_shepherding.py  test_snowflake_review.py  test_tone_guard.py  test_tool_executor.py
tests/scoring/: test_blame_fetcher.py  test_cve_history.py  test_downstream.py  test_moderation.py  test_rejection_predictor.py  test_rlm_interest.py  test_rlm_rejection.py  test_scorer.py  test_signals.py
tests/security/: test_cve_lookup.py  test_malicious_prompt.py  test_prompt.py  test_sandbox.py  test_triage.py
tests/worker/: test_commands.py  test_merge_queue.py  test_migration_conflicts.py  test_preflight.py  test_process_pr_diff.py  test_process_pr_gate.py  test_repo_health.py  test_repo_manager.py  test_runner_args.py  test_runner_cli_tools.py  test_security_email_poll.py  test_test_identifier.py  test_test_image.py  test_test_runner.py  test_test_workspace.py  test_tool_sandbox.py
web/: __init__.py  main.py
web/templates/: dashboard.html
worker/: __init__.py  main.py
(+280 files in other folders)
