[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "franktheunicorn"
version = "0.1.0"
description = "Local-first AI code review assistant for open-source maintainers"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1,<5.3",
    "httpx>=0.27,<1.0",
    "pydantic>=2.7,<3.0",
    "pyyaml>=6.0,<7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-django>=4.8,<5.0",
    "pytest-cov>=5.0,<6.0",
    "pytest-httpx>=0.30,<1.0",
    "ruff>=0.5,<1.0",
    "mypy>=1.10,<2.0",
    "django-stubs>=5.0,<6.0",
    "types-PyYAML>=6.0,<7.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "franktheunicorn.settings"
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--strict-markers -v --tb=short"
markers = [
    "integration: marks tests as integration tests",
]

[tool.ruff]
src = ["src", "tests"]
line-length = 99
target-version = "py312"
extend-exclude = ["*/migrations/*"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "T20",   # flake8-print
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "RUF012",  # mutable class attributes (standard Django model pattern)
]

[tool.ruff.lint.isort]
known-first-party = ["franktheunicorn"]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
plugins = ["mypy_django_plugin.main"]
strict = true
warn_unreachable = true
disallow_untyped_defs = true
ignore_missing_imports = false

[tool.django-stubs]
django_settings_module = "franktheunicorn.settings"

[tool.coverage.run]
source = ["franktheunicorn"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/wsgi.py",
    "*/worker/runner.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ ==",
]
