[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "franktheunicorn"
version = "0.1.0"
description = "Local-first AI code review assistant for open-source maintainers"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "django>=5.1,<5.3",
    "httpx>=0.27,<1.0",
    "pydantic>=2.7,<3.0",
    "pyyaml>=6.0,<7.0",
    "pyrate-limiter>=3.0,<4.0",
    "beautifulsoup4>=4.12,<5.0",
    "simpleeval>=1.0,<2.0",
    "copydetect>=0.5,<1.0",
    "unidiff>=0.7,<1.0",
    "anthropic>=0.42,<1.0",
    "openai>=1.60,<2.0",
    "google-genai>=1.0,<2.0",
    "ollama>=0.4,<1.0",
    "psutil>=5.9,<7.0",
    "scikit-learn>=1.4,<2.0",
    "textual>=0.80,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-django>=4.8,<5.0",
    "pytest-cov>=5.0,<6.0",
    "pytest-httpx>=0.30,<1.0",
    "factory-boy>=3.3,<4.0",
    "pylint>=3.0,<5.0",
    "pylint-django>=2.6,<3.0",
    "ruff>=0.5,<1.0",
    "mypy>=1.19.1,<2.0",
    "django-stubs>=5.0,<6.0",
    "types-PyYAML>=6.0,<7.0",
    "types-beautifulsoup4>=4.12,<5.0",
    "types-psutil>=5.9,<7.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"franktheunicorn" = [
    "dashboard/templates/**/*.html",
    "dashboard/static/**/*.js",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "franktheunicorn.settings"
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--strict-markers -v --tb=short"
markers = [
    "integration: marks tests as integration tests",
]

[tool.ruff]
src = ["src", "tests"]
line-length = 100
target-version = "py312"
extend-exclude = ["*/migrations/*"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "T20",   # flake8-print
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "RUF012",  # mutable class attributes (standard Django model pattern)
]

[tool.ruff.lint.isort]
known-first-party = ["franktheunicorn"]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
plugins = ["mypy_django_plugin.main"]
strict = true
warn_unreachable = true
disallow_untyped_defs = true
ignore_missing_imports = false

[tool.django-stubs]
django_settings_module = "franktheunicorn.settings"

[tool.coverage.run]
source = ["franktheunicorn"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/wsgi.py",
    "*/worker/runner.py",
    "*/management/commands/init_project.py",
    "*/management/commands/run_worker.py",
    "*/management/commands/detect_collaborators.py",
]

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ ==",
]

[tool.pylint.main]
load-plugins = ["pylint_django"]
django-settings-module = "franktheunicorn.settings"
init-hook = "import sys; sys.path.insert(0, 'src'); sys.path.insert(0, '.')"

[tool.pylint."messages control"]
disable = [
    "too-few-public-methods",    # Django Meta classes, factory Meta classes
    "missing-class-docstring",   # Django Meta inner classes, test classes named descriptively
    "missing-function-docstring", # Test methods are self-documenting via names
    "import-outside-toplevel",   # Used intentionally in tests
    "protected-access",          # Needed for admin._registry checks in tests
    "unused-argument",           # pytest fixtures appear unused
    "redefined-outer-name",      # pytest fixture pattern
]
